# manim-compass

./: README.md  pyproject.toml
demo/: compass_demo.py  compass_scene_demo.py
src/manim_compass/: __init__.py
src/manim_compass/animations/: __init__.py  animation_compass.py  animation_pencil.py  animation_ruler.py
src/manim_compass/compass/: __init__.py  compass.py  pencil.py  ruler.py
src/manim_compass/scene/: __init__.py  compass_scene.py
src/manim_compass/utils/: __init__.py  geometry_method.py
